# dtwin-backend/src/routes/passwordResetRoute.js
@@ -1,0 +1,14 @@
+import express from "express";
+import {
+  forgotPassword,
+  resetPassword,
+  verifyForgotPasswordOTP,
+} from "../controllers/passwordResetController.js";
+
+const router = express.Router();
+
+router.post("/", forgotPassword);
+router.post("/verify", verifyForgotPasswordOTP);
+router.post("/reset", resetPassword);
+
+export default router;
